--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Train Name</th>
-                                <th>Destination</th>
-                                <th>Frequency (min)</th>
-                                <th>Next Arrival</th>
-                                <th>Minutes Away</th>
+                                <th class="text-center">Train Name</th>
+                                <th class="text-center">Destination</th>
+                                <th class="text-center">Next Arrival</th>
+                                <th class="text-center">Frequency (min)</th>
+                                <th class="text-center">Minutes Away</th>
                             </tr>
                         </thead>
                         <tbody id="train-table">
@@ -95,7 +95,7 @@
                                 <label for="frequency-input">Frequency (min)</label>
                                 <input class="form-control" id="frequency-input" type="number">
                             </div>
-                            <button class="btn btn-default" id="add-train" type="submit">Submit</button>
+                            <button class="btn btn-default" id="add-train" type="submit">Add New Train</button>
                         </form>
 
                     </div>
