--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     <div class="card-header">
                         Current Trains Schedule
                     </div>
-                    <table class="table">
-                        <thead>
+                    <table class="table table-striped">
+                        <caption>Trains Schedules</caption>
+                        <thead class="thead-dark">
                             <tr>
                                 <th class="text-center">Train Name</th>
                                 <th class="text-center">Destination</th>
